--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<div class="flex-box">
 
-		<input id="block_id" placeholder="Enter block id"/>
+		<input id="block_id" placeholder="Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size."/>
   <input id="colour_id" placeholder="Enter colour Hexcode" />
   <button id="change_button"  >Change</button>
   <button id="reset_button">Reset</button>
